--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
+    "react-scroll-parallax": "^3.4.2",
     "sort-by": "^1.2.0",
     "swiper": "^9.3.2"
   },
