--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "daisyui": "^2.51.6",
-    "firebase": "^9.22.0",
+    "firebase": "^9.22.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -22,6 +22,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scroll-parallax": "^3.4.2",
+    "react-simple-captcha": "^9.0.2",
     "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
     "swiper": "^9.3.2"
